# projet-spark-4a

./: .env  .gitignore  Conventions_Rustfs.md  README.md  TODO.md
backend/: .env  config.py  db.py  jobs.py  main.py  pyproject.toml  s3.py
front-streamlit/: pyproject.toml
frontend/: .env  .env.local.example  .gitignore  README.md  app.py  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/login/: page.tsx
frontend/app/tops/: page.tsx
frontend/app/users/[id]/: page.tsx
frontend/app/videos/: page.tsx
frontend/app/videos/[id]/: page.tsx
frontend/components/: donut-chart.tsx  h-bar-ranking.tsx  letter-bars.tsx  letter-timeline.tsx  nav.tsx  radial-gauge.tsx  stat-card.tsx  status-pill.tsx  timeline-chart.tsx
frontend/lib/: api.ts  auth.ts
frontend/src/: app.d.ts
frontend/src/lib/: auth.ts
frontend/src/lib/components/: VideoUploader.svelte
frontend/src/lib/storage/: s3.ts
frontend/src/routes/: +page.svelte  layout.css
frontend/src/routes/source/: +layout.svelte
infrastructure/: docker-compose.yml
infrastructure/postgres/init/: 002_better-auth-tables.sql  002_job_table.sql  003_videos_table.sql
infrastructure/rustfs/scripts/: rustfs-init.sh
python/: .env.example  pyproject.toml
python/frontend/: main.py
python/scripts/: create-job.py  download_data.py
python/server/: db.py  main.py  rustfs.py
python/src/asl/: dl2.py  dl_dataset.py
scripts/: generate-env.py
spark-scala/: .env  build.sbt  run.sh
spark-scala/src/main/scala/: Main.scala  (+2 more)
(+23 files in other folders)
