[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.91",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.44.0",
]
